demos/devdocs/0.58.0/nvdocument/type-aliases/NVConfigOptions.md
# Type Alias: NVConfigOptions

```ts
type NVConfigOptions = object;
```

Defined in: [nvdocument.ts:82](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L82)

NVConfigOptions

## Properties

### atlasActiveIndex

```ts
atlasActiveIndex: number;
```

Defined in: [nvdocument.ts:121](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L121)

---

### atlasOutline

```ts
atlasOutline: number;
```

Defined in: [nvdocument.ts:120](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L120)

---

### backColor

```ts
backColor: number[];
```

Defined in: [nvdocument.ts:98](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L98)

---

### centerMosaic

```ts
centerMosaic: boolean;
```

Defined in: [nvdocument.ts:176](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L176)

---

### clickToSegment

```ts
clickToSegment: boolean;
```

Defined in: [nvdocument.ts:180](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L180)

---

### clickToSegmentAutoIntensity

```ts
clickToSegmentAutoIntensity: boolean;
```

Defined in: [nvdocument.ts:183](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L183)

---

### clickToSegmentBright

```ts
clickToSegmentBright: boolean;
```

Defined in: [nvdocument.ts:182](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L182)

---

### clickToSegmentIntensityMax

```ts
clickToSegmentIntensityMax: number;
```

Defined in: [nvdocument.ts:184](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L184)

---

### clickToSegmentIntensityMin

```ts
clickToSegmentIntensityMin: number;
```

Defined in: [nvdocument.ts:185](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L185)

---

### clickToSegmentIs2D

```ts
clickToSegmentIs2D: boolean;
```

Defined in: [nvdocument.ts:188](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L188)

---

### clickToSegmentMaxDistanceMM

```ts
clickToSegmentMaxDistanceMM: number;
```

Defined in: [nvdocument.ts:187](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L187)

---

### clickToSegmentPercent

```ts
clickToSegmentPercent: number;
```

Defined in: [nvdocument.ts:186](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L186)

---

### clickToSegmentRadius

```ts
clickToSegmentRadius: number;
```

Defined in: [nvdocument.ts:181](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L181)

---

### clipPlaneColor

```ts
clipPlaneColor: number[];
```

Defined in: [nvdocument.ts:102](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L102)

---

### clipPlaneHotKey

```ts
clipPlaneHotKey: string;
```

Defined in: [nvdocument.ts:112](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L112)

---

### clipThick

```ts
clipThick: number;
```

Defined in: [nvdocument.ts:103](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L103)

---

### clipVolumeHigh

```ts
clipVolumeHigh: number[];
```

Defined in: [nvdocument.ts:105](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L105)

---

### clipVolumeLow

```ts
clipVolumeLow: number[];
```

Defined in: [nvdocument.ts:104](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L104)

---

### colorbarHeight

```ts
colorbarHeight: number;
```

Defined in: [nvdocument.ts:88](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L88)

---

### colorbarMargin

```ts
colorbarMargin: number;
```

Defined in: [nvdocument.ts:108](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L108)

---

### colorbarWidth

```ts
colorbarWidth: number;
```

Defined in: [nvdocument.ts:90](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L90)

---

### crosshairColor

```ts
crosshairColor: number[];
```

Defined in: [nvdocument.ts:99](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L99)

---

### crosshairGap

```ts
crosshairGap: number;
```

Defined in: [nvdocument.ts:95](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L95)

---

### crosshairWidth

```ts
crosshairWidth: number;
```

Defined in: [nvdocument.ts:93](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L93)

---

### crosshairWidthUnit

```ts
crosshairWidthUnit: "voxels" | "mm" | "percent";
```

Defined in: [nvdocument.ts:94](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L94)

---

### doubleTouchTimeout

```ts
doubleTouchTimeout: number;
```

Defined in: [nvdocument.ts:115](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L115)

---

### dragAndDropEnabled

```ts
dragAndDropEnabled: boolean;
```

Defined in: [nvdocument.ts:151](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L151)

---

### dragMode

```ts
dragMode:
  | DRAG_MODE
  | DRAG_MODE_SECONDARY;
```

Defined in: [nvdocument.ts:134](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L134)

---

### dragModePrimary

```ts
dragModePrimary: DRAG_MODE_PRIMARY;
```

Defined in: [nvdocument.ts:135](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L135)

---

### drawingEnabled

```ts
drawingEnabled: boolean;
```

Defined in: [nvdocument.ts:153](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L153)

---

### floodFillNeighbors

```ts
floodFillNeighbors: number;
```

Defined in: [nvdocument.ts:157](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L157)

---

### fontColor

```ts
fontColor: Float32List;
```

Defined in: [nvdocument.ts:100](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L100)

---

### fontMinPx

```ts
fontMinPx: number;
```

Defined in: [nvdocument.ts:86](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L86)

---

### fontSizeScaling

```ts
fontSizeScaling: number;
```

Defined in: [nvdocument.ts:85](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L85)

---

### forceDevicePixelRatio

```ts
forceDevicePixelRatio: number;
```

Defined in: [nvdocument.ts:147](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L147)

---

### gradientAmount

```ts
gradientAmount: number;
```

Defined in: [nvdocument.ts:203](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L203)

---

### gradientOpacity

```ts
gradientOpacity: number;
```

Defined in: [nvdocument.ts:201](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L201)

---

### gradientOrder

```ts
gradientOrder: number;
```

Defined in: [nvdocument.ts:200](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L200)

---

### heroImageFraction

```ts
heroImageFraction: number;
```

Defined in: [nvdocument.ts:140](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L140)

---

### heroSliceType

```ts
heroSliceType: SLICE_TYPE;
```

Defined in: [nvdocument.ts:141](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L141)

---

### interactive

```ts
interactive: boolean;
```

Defined in: [nvdocument.ts:178](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L178)

---

### invertScrollDirection

```ts
invertScrollDirection: boolean;
```

Defined in: [nvdocument.ts:204](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L204)

---

### is2DSliceShader

```ts
is2DSliceShader: boolean;
```

Defined in: [nvdocument.ts:205](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L205)

---

### isAdditiveBlend

```ts
isAdditiveBlend: boolean;
```

Defined in: [nvdocument.ts:163](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L163)

---

### isAlphaClipDark

```ts
isAlphaClipDark: boolean;
```

Defined in: [nvdocument.ts:199](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L199)

---

### isAntiAlias

```ts
isAntiAlias: boolean | null;
```

Defined in: [nvdocument.ts:162](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L162)

---

### isColorbar

```ts
isColorbar: boolean;
```

Defined in: [nvdocument.ts:123](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L123)

---

### isCornerOrientationText

```ts
isCornerOrientationText: boolean;
```

Defined in: [nvdocument.ts:138](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L138)

---

### isDepthPickMesh

```ts
isDepthPickMesh: boolean;
```

Defined in: [nvdocument.ts:137](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L137)

---

### isFilledPen

```ts
isFilledPen: boolean;
```

Defined in: [nvdocument.ts:158](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L158)

---

### isForceMouseClickToVoxelCenters

```ts
isForceMouseClickToVoxelCenters: boolean;
```

Defined in: [nvdocument.ts:150](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L150)

---

### isNearestInterpolation

```ts
isNearestInterpolation: boolean;
```

Defined in: [nvdocument.ts:119](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L119)

---

### isOrientationTextVisible

```ts
isOrientationTextVisible: boolean;
```

Defined in: [nvdocument.ts:139](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L139)

---

### isOrientCube

```ts
isOrientCube: boolean;
```

Defined in: [nvdocument.ts:124](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L124)

---

### isRadiologicalConvention

```ts
isRadiologicalConvention: boolean;
```

Defined in: [nvdocument.ts:131](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L131)

---

### isResizeCanvas

```ts
isResizeCanvas: boolean;
```

Defined in: [nvdocument.ts:166](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L166)

---

### isRuler

```ts
isRuler: boolean;
```

Defined in: [nvdocument.ts:122](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L122)

---

### isSliceMM

```ts
isSliceMM: boolean;
```

Defined in: [nvdocument.ts:144](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L144)

---

### isV1SliceShader

```ts
isV1SliceShader: boolean;
```

Defined in: [nvdocument.ts:146](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L146)

---

### keyDebounceTime

```ts
keyDebounceTime: number;
```

Defined in: [nvdocument.ts:118](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L118)

---

### legendBackgroundColor

```ts
legendBackgroundColor: number[];
```

Defined in: [nvdocument.ts:171](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L171)

---

### legendTextColor

```ts
legendTextColor: number[];
```

Defined in: [nvdocument.ts:172](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L172)

---

### limitFrames4D

```ts
limitFrames4D: number;
```

Defined in: [nvdocument.ts:168](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L168)

---

### loadingText

```ts
loadingText: string;
```

Defined in: [nvdocument.ts:149](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L149)

---

### logLevel

```ts
logLevel: "debug" | "info" | "warn" | "error" | "fatal" | "silent";
```

Defined in: [nvdocument.ts:148](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L148)

---

### longTouchTimeout

```ts
longTouchTimeout: number;
```

Defined in: [nvdocument.ts:116](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L116)

---

### maxDrawUndoBitmaps

```ts
maxDrawUndoBitmaps: number;
```

Defined in: [nvdocument.ts:160](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L160)

---

### measureLineColor

```ts
measureLineColor: number[];
```

Defined in: [nvdocument.ts:197](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L197)

---

### measureTextColor

```ts
measureTextColor: number[];
```

Defined in: [nvdocument.ts:196](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L196)

---

### measureTextHeight

```ts
measureTextHeight: number;
```

Defined in: [nvdocument.ts:198](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L198)

---

### measureTextJustify

```ts
measureTextJustify: "start" | "center" | "end";
```

Defined in: [nvdocument.ts:195](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L195)

---

### meshThicknessOn2D

```ts
meshThicknessOn2D: number | string;
```

Defined in: [nvdocument.ts:133](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L133)

---

### meshXRay

```ts
meshXRay: number;
```

Defined in: [nvdocument.ts:167](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L167)

---

### multiplanarEqualSize

```ts
multiplanarEqualSize: boolean;
```

Defined in: [nvdocument.ts:129](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L129)

---

### multiplanarForceRender

```ts
multiplanarForceRender: boolean;
```

Defined in: [nvdocument.ts:128](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L128)

---

### multiplanarLayout

```ts
multiplanarLayout: MULTIPLANAR_TYPE;
```

Defined in: [nvdocument.ts:173](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L173)

---

### multiplanarPadPixels

```ts
multiplanarPadPixels: number;
```

Defined in: [nvdocument.ts:126](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L126)

---

### multiplanarShowRender

```ts
multiplanarShowRender: SHOW_RENDER;
```

Defined in: [nvdocument.ts:130](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L130)

---

### penSize

```ts
penSize: number;
```

Defined in: [nvdocument.ts:179](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L179)

---

### penValue

```ts
penValue: number;
```

Defined in: [nvdocument.ts:155](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L155)

---

### renderOverlayBlend

```ts
renderOverlayBlend: number;
```

Defined in: [nvdocument.ts:174](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L174)

---

### renderSilhouette

```ts
renderSilhouette: number;
```

Defined in: [nvdocument.ts:202](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L202)

---

### rulerColor

```ts
rulerColor: number[];
```

Defined in: [nvdocument.ts:106](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L106)

---

### rulerWidth

```ts
rulerWidth: number;
```

Defined in: [nvdocument.ts:96](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L96)

---

### sagittalNoseLeft

```ts
sagittalNoseLeft: boolean;
```

Defined in: [nvdocument.ts:143](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L143)

---

### scrollRequiresFocus

```ts
scrollRequiresFocus: boolean;
```

Defined in: [nvdocument.ts:192](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L192)

---

### selectionBoxColor

```ts
selectionBoxColor: number[];
```

Defined in: [nvdocument.ts:101](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L101)

---

### selectionBoxIsOutline

```ts
selectionBoxIsOutline: boolean;
```

Defined in: [nvdocument.ts:191](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L191)

---

### selectionBoxLineThickness

```ts
selectionBoxLineThickness: number;
```

Defined in: [nvdocument.ts:190](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L190)

---

### show3Dcrosshair

```ts
show3Dcrosshair: boolean;
```

Defined in: [nvdocument.ts:97](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L97)

---

### showColorbarBorder

```ts
showColorbarBorder: boolean;
```

Defined in: [nvdocument.ts:91](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L91)

---

### showLegend

```ts
showLegend: boolean;
```

Defined in: [nvdocument.ts:170](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L170)

---

### showMeasureUnits

```ts
showMeasureUnits: boolean;
```

Defined in: [nvdocument.ts:193](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L193)

---

### sliceMosaicString

```ts
sliceMosaicString: string;
```

Defined in: [nvdocument.ts:175](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L175)

---

### sliceType

```ts
sliceType: SLICE_TYPE;
```

Defined in: [nvdocument.ts:161](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L161)

---

### textHeight

```ts
textHeight: number;
```

Defined in: [nvdocument.ts:84](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L84)

---

### thumbnail

```ts
thumbnail: string;
```

Defined in: [nvdocument.ts:159](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L159)

---

### tileMargin

```ts
tileMargin: number;
```

Defined in: [nvdocument.ts:125](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L125)

---

### trustCalMinMax

```ts
trustCalMinMax: boolean;
```

Defined in: [nvdocument.ts:110](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L110)

---

### viewModeHotKey

```ts
viewModeHotKey: string;
```

Defined in: [nvdocument.ts:114](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L114)

---

### yoke3Dto2DZoom

```ts
yoke3Dto2DZoom: boolean;
```

Defined in: [nvdocument.ts:136](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L136)
