demos/devdocs/0.62.1/nvdocument/type-aliases/NVConfigOptions.md
# Type Alias: NVConfigOptions

```ts
type NVConfigOptions = object;
```

Defined in: [nvdocument.ts:115](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L115)

NVConfigOptions

## Properties

### atlasActiveIndex

```ts
atlasActiveIndex: number;
```

Defined in: [nvdocument.ts:155](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L155)

---

### atlasOutline

```ts
atlasOutline: number;
```

Defined in: [nvdocument.ts:154](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L154)

---

### backColor

```ts
backColor: number[];
```

Defined in: [nvdocument.ts:131](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L131)

---

### centerMosaic

```ts
centerMosaic: boolean;
```

Defined in: [nvdocument.ts:215](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L215)

---

### clickToSegment

```ts
clickToSegment: boolean;
```

Defined in: [nvdocument.ts:219](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L219)

---

### clickToSegmentAutoIntensity

```ts
clickToSegmentAutoIntensity: boolean;
```

Defined in: [nvdocument.ts:222](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L222)

---

### clickToSegmentBright

```ts
clickToSegmentBright: boolean;
```

Defined in: [nvdocument.ts:221](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L221)

---

### clickToSegmentIntensityMax

```ts
clickToSegmentIntensityMax: number;
```

Defined in: [nvdocument.ts:223](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L223)

---

### clickToSegmentIntensityMin

```ts
clickToSegmentIntensityMin: number;
```

Defined in: [nvdocument.ts:224](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L224)

---

### clickToSegmentIs2D

```ts
clickToSegmentIs2D: boolean;
```

Defined in: [nvdocument.ts:227](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L227)

---

### clickToSegmentMaxDistanceMM

```ts
clickToSegmentMaxDistanceMM: number;
```

Defined in: [nvdocument.ts:226](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L226)

---

### clickToSegmentPercent

```ts
clickToSegmentPercent: number;
```

Defined in: [nvdocument.ts:225](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L225)

---

### clickToSegmentRadius

```ts
clickToSegmentRadius: number;
```

Defined in: [nvdocument.ts:220](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L220)

---

### clipPlaneColor

```ts
clipPlaneColor: number[];
```

Defined in: [nvdocument.ts:135](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L135)

---

### clipPlaneHotKey

```ts
clipPlaneHotKey: string;
```

Defined in: [nvdocument.ts:146](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L146)

---

### clipThick

```ts
clipThick: number;
```

Defined in: [nvdocument.ts:137](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L137)

---

### clipVolumeHigh

```ts
clipVolumeHigh: number[];
```

Defined in: [nvdocument.ts:139](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L139)

---

### clipVolumeLow

```ts
clipVolumeLow: number[];
```

Defined in: [nvdocument.ts:138](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L138)

---

### colorbarHeight

```ts
colorbarHeight: number;
```

Defined in: [nvdocument.ts:121](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L121)

---

### colorbarMargin

```ts
colorbarMargin: number;
```

Defined in: [nvdocument.ts:142](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L142)

---

### colorbarWidth

```ts
colorbarWidth: number;
```

Defined in: [nvdocument.ts:123](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L123)

---

### crosshairColor

```ts
crosshairColor: number[];
```

Defined in: [nvdocument.ts:132](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L132)

---

### crosshairGap

```ts
crosshairGap: number;
```

Defined in: [nvdocument.ts:128](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L128)

---

### crosshairWidth

```ts
crosshairWidth: number;
```

Defined in: [nvdocument.ts:126](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L126)

---

### crosshairWidthUnit

```ts
crosshairWidthUnit: "voxels" | "mm" | "percent";
```

Defined in: [nvdocument.ts:127](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L127)

---

### doubleTouchTimeout

```ts
doubleTouchTimeout: number;
```

Defined in: [nvdocument.ts:149](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L149)

---

### dragAndDropEnabled

```ts
dragAndDropEnabled: boolean;
```

Defined in: [nvdocument.ts:188](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L188)

---

### dragMode

```ts
dragMode: DRAG_MODE;
```

Defined in: [nvdocument.ts:168](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L168)

---

### dragModePrimary

```ts
dragModePrimary: DRAG_MODE;
```

Defined in: [nvdocument.ts:169](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L169)

---

### drawingEnabled

```ts
drawingEnabled: boolean;
```

Defined in: [nvdocument.ts:190](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L190)

---

### floodFillNeighbors

```ts
floodFillNeighbors: number;
```

Defined in: [nvdocument.ts:196](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L196)

---

### fontColor

```ts
fontColor: Float32List;
```

Defined in: [nvdocument.ts:133](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L133)

---

### fontMinPx

```ts
fontMinPx: number;
```

Defined in: [nvdocument.ts:119](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L119)

---

### fontSizeScaling

```ts
fontSizeScaling: number;
```

Defined in: [nvdocument.ts:118](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L118)

---

### forceDevicePixelRatio

```ts
forceDevicePixelRatio: number;
```

Defined in: [nvdocument.ts:184](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L184)

---

### gradientAmount

```ts
gradientAmount: number;
```

Defined in: [nvdocument.ts:242](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L242)

---

### gradientOpacity

```ts
gradientOpacity: number;
```

Defined in: [nvdocument.ts:240](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L240)

---

### gradientOrder

```ts
gradientOrder: number;
```

Defined in: [nvdocument.ts:239](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L239)

---

### heroImageFraction

```ts
heroImageFraction: number;
```

Defined in: [nvdocument.ts:177](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L177)

---

### heroSliceType

```ts
heroSliceType: SLICE_TYPE;
```

Defined in: [nvdocument.ts:178](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L178)

---

### interactive

```ts
interactive: boolean;
```

Defined in: [nvdocument.ts:217](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L217)

---

### invertScrollDirection

```ts
invertScrollDirection: boolean;
```

Defined in: [nvdocument.ts:243](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L243)

---

### is2DSliceShader

```ts
is2DSliceShader: boolean;
```

Defined in: [nvdocument.ts:244](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L244)

---

### isAdditiveBlend

```ts
isAdditiveBlend: boolean;
```

Defined in: [nvdocument.ts:202](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L202)

---

### isAlphaClipDark

```ts
isAlphaClipDark: boolean;
```

Defined in: [nvdocument.ts:238](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L238)

---

### isAntiAlias

```ts
isAntiAlias: boolean | null;
```

Defined in: [nvdocument.ts:201](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L201)

---

### isColorbar

```ts
isColorbar: boolean;
```

Defined in: [nvdocument.ts:157](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L157)

---

### isCornerOrientationText

```ts
isCornerOrientationText: boolean;
```

Defined in: [nvdocument.ts:174](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L174)

---

### isDepthPickMesh

```ts
isDepthPickMesh: boolean;
```

Defined in: [nvdocument.ts:173](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L173)

---

### isFilledPen

```ts
isFilledPen: boolean;
```

Defined in: [nvdocument.ts:197](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L197)

---

### isForceMouseClickToVoxelCenters

```ts
isForceMouseClickToVoxelCenters: boolean;
```

Defined in: [nvdocument.ts:187](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L187)

---

### isNearestInterpolation

```ts
isNearestInterpolation: boolean;
```

Defined in: [nvdocument.ts:153](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L153)

---

### isOrientationTextVisible

```ts
isOrientationTextVisible: boolean;
```

Defined in: [nvdocument.ts:175](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L175)

---

### isOrientCube

```ts
isOrientCube: boolean;
```

Defined in: [nvdocument.ts:158](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L158)

---

### isRadiologicalConvention

```ts
isRadiologicalConvention: boolean;
```

Defined in: [nvdocument.ts:165](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L165)

---

### isResizeCanvas

```ts
isResizeCanvas: boolean;
```

Defined in: [nvdocument.ts:205](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L205)

---

### isRuler

```ts
isRuler: boolean;
```

Defined in: [nvdocument.ts:156](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L156)

---

### isSliceMM

```ts
isSliceMM: boolean;
```

Defined in: [nvdocument.ts:181](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L181)

---

### isV1SliceShader

```ts
isV1SliceShader: boolean;
```

Defined in: [nvdocument.ts:183](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L183)

---

### keyDebounceTime

```ts
keyDebounceTime: number;
```

Defined in: [nvdocument.ts:152](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L152)

---

### legendBackgroundColor

```ts
legendBackgroundColor: number[];
```

Defined in: [nvdocument.ts:210](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L210)

---

### legendTextColor

```ts
legendTextColor: number[];
```

Defined in: [nvdocument.ts:211](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L211)

---

### limitFrames4D

```ts
limitFrames4D: number;
```

Defined in: [nvdocument.ts:207](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L207)

---

### loadingText

```ts
loadingText: string;
```

Defined in: [nvdocument.ts:186](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L186)

---

### logLevel

```ts
logLevel: "debug" | "info" | "warn" | "error" | "fatal" | "silent";
```

Defined in: [nvdocument.ts:185](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L185)

---

### longTouchTimeout

```ts
longTouchTimeout: number;
```

Defined in: [nvdocument.ts:150](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L150)

---

### maxDrawUndoBitmaps

```ts
maxDrawUndoBitmaps: number;
```

Defined in: [nvdocument.ts:199](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L199)

---

### measureLineColor

```ts
measureLineColor: number[];
```

Defined in: [nvdocument.ts:236](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L236)

---

### measureTextColor

```ts
measureTextColor: number[];
```

Defined in: [nvdocument.ts:235](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L235)

---

### measureTextHeight

```ts
measureTextHeight: number;
```

Defined in: [nvdocument.ts:237](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L237)

---

### measureTextJustify

```ts
measureTextJustify: "start" | "center" | "end";
```

Defined in: [nvdocument.ts:234](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L234)

---

### meshThicknessOn2D

```ts
meshThicknessOn2D: number | string;
```

Defined in: [nvdocument.ts:167](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L167)

---

### meshXRay

```ts
meshXRay: number;
```

Defined in: [nvdocument.ts:206](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L206)

---

### mouseEventConfig?

```ts
optional mouseEventConfig: MouseEventConfig;
```

Defined in: [nvdocument.ts:170](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L170)

---

### multiplanarEqualSize

```ts
multiplanarEqualSize: boolean;
```

Defined in: [nvdocument.ts:163](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L163)

---

### multiplanarForceRender

```ts
multiplanarForceRender: boolean;
```

Defined in: [nvdocument.ts:162](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L162)

---

### multiplanarLayout

```ts
multiplanarLayout: MULTIPLANAR_TYPE;
```

Defined in: [nvdocument.ts:212](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L212)

---

### multiplanarPadPixels

```ts
multiplanarPadPixels: number;
```

Defined in: [nvdocument.ts:160](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L160)

---

### multiplanarShowRender

```ts
multiplanarShowRender: SHOW_RENDER;
```

Defined in: [nvdocument.ts:164](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L164)

---

### paqdUniforms

```ts
paqdUniforms: number[];
```

Defined in: [nvdocument.ts:136](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L136)

---

### penSize

```ts
penSize: number;
```

Defined in: [nvdocument.ts:218](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L218)

---

### penType

```ts
penType: PEN_TYPE;
```

Defined in: [nvdocument.ts:194](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L194)

---

### penValue

```ts
penValue: number;
```

Defined in: [nvdocument.ts:192](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L192)

---

### renderOverlayBlend

```ts
renderOverlayBlend: number;
```

Defined in: [nvdocument.ts:213](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L213)

---

### renderSilhouette

```ts
renderSilhouette: number;
```

Defined in: [nvdocument.ts:241](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L241)

---

### rulerColor

```ts
rulerColor: number[];
```

Defined in: [nvdocument.ts:140](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L140)

---

### rulerWidth

```ts
rulerWidth: number;
```

Defined in: [nvdocument.ts:129](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L129)

---

### sagittalNoseLeft

```ts
sagittalNoseLeft: boolean;
```

Defined in: [nvdocument.ts:180](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L180)

---

### scrollRequiresFocus

```ts
scrollRequiresFocus: boolean;
```

Defined in: [nvdocument.ts:231](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L231)

---

### selectionBoxColor

```ts
selectionBoxColor: number[];
```

Defined in: [nvdocument.ts:134](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L134)

---

### selectionBoxIsOutline

```ts
selectionBoxIsOutline: boolean;
```

Defined in: [nvdocument.ts:230](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L230)

---

### selectionBoxLineThickness

```ts
selectionBoxLineThickness: number;
```

Defined in: [nvdocument.ts:229](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L229)

---

### show3Dcrosshair

```ts
show3Dcrosshair: boolean;
```

Defined in: [nvdocument.ts:130](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L130)

---

### showAllOrientationMarkers

```ts
showAllOrientationMarkers: boolean;
```

Defined in: [nvdocument.ts:176](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L176)

---

### showColorbarBorder

```ts
showColorbarBorder: boolean;
```

Defined in: [nvdocument.ts:124](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L124)

---

### showLegend

```ts
showLegend: boolean;
```

Defined in: [nvdocument.ts:209](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L209)

---

### showMeasureUnits

```ts
showMeasureUnits: boolean;
```

Defined in: [nvdocument.ts:232](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L232)

---

### sliceMosaicString

```ts
sliceMosaicString: string;
```

Defined in: [nvdocument.ts:214](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L214)

---

### sliceType

```ts
sliceType: SLICE_TYPE;
```

Defined in: [nvdocument.ts:200](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L200)

---

### textHeight

```ts
textHeight: number;
```

Defined in: [nvdocument.ts:117](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L117)

---

### thumbnail

```ts
thumbnail: string;
```

Defined in: [nvdocument.ts:198](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L198)

---

### tileMargin

```ts
tileMargin: number;
```

Defined in: [nvdocument.ts:159](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L159)

---

### touchEventConfig?

```ts
optional touchEventConfig: TouchEventConfig;
```

Defined in: [nvdocument.ts:171](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L171)

---

### trustCalMinMax

```ts
trustCalMinMax: boolean;
```

Defined in: [nvdocument.ts:144](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L144)

---

### viewModeHotKey

```ts
viewModeHotKey: string;
```

Defined in: [nvdocument.ts:148](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L148)

---

### yoke3Dto2DZoom

```ts
yoke3Dto2DZoom: boolean;
```

Defined in: [nvdocument.ts:172](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L172)
